apps/base/ollama/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollama
  labels:
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
