apps/base/ollama/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
spec:
  ports:
    - port: 11434
      targetPort: 11434
      protocol: TCP
  selector:
    app: ollama
  type: ClusterIP
